--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.23.104:8082/upload/jiuwei186827_205_store.ipa</string>
+					<string>http://ooa.nandin.com.cn/upload/jiuwei186827_205_store.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
