--- a/install.plist
+++ b/install.plist
@@ -27,7 +27,7 @@
 				<key>bundle-identifier</key>
 				<string>com.ydb.ipa</string>
 				<key>bundle-version</key>
-				<string>2.0.5</string>
+				<string>201801171725</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
