--- a/install.plist
+++ b/install.plist
@@ -29,9 +29,9 @@
 				<key>bundle-version</key>
 				<string>201801171725</string>
 				<key>kind</key>
-				<string>software</string>
+				<string>APPL</string>
 				<key>title</key>
-				<string>ipa</string>
+				<string>xyx</string>
 			</dict>
 		</dict>
 	</array>
