--- a/install.plist
+++ b/install.plist
@@ -31,7 +31,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>xyx</string>
+				<string>ipa</string>
 			</dict>
 		</dict>
 	</array>
